# rental

./: .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  requirements.txt  run.sh  scraper.py  utils.py
backend/: .env.example  api.py  database.py  main.py  pyproject.toml  scraper.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
