[project]
name = "rental"
version = "0.1.0"
description = "Rental scraper for Zillow and Redfin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapling",
    "httpx",
    "python-dotenv",
    "curl-cffi",
    "playwright",
    "patchright",
    "msgspec",
    "browserforge",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]
